@@ -13,6 +13,7 @@ Version 0.16 - 2011-XX-XX
  * Added a quit confirmation dialog. (PICARD-46)
  * Standalone recordings can be tagged with relationships now. (PICARD-10)
  * Refreshing an album will refresh its "other versions" listing. (PICARD-8)
+ * "Unicode punctuation to ASCII" now works on album-level metadata. (PICARD-50)
 
 Version 0.15.1 - 2011-07-31
  * "Other versions" menu now displays release labels and catalog numbers.
